--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@
 }
 
 body {
-  font-size: var(--body-font-size-m);
+  font-family: 'Adobe Clean', adobe-clean, 'Trebuchet MS', sans-serif;
   margin: 0;
   font-family: var(--body-font-family);
   line-height: 1.6;
@@ -163,7 +163,7 @@ main input:hover {
 }
 
 main .section {
-  padding: 64px 16px;
+  /* padding: 64px 16px; */
 }
 
 main pre {
