--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 16px;
 }
 
@@ -14,6 +14,10 @@
 
 .cards .cards-card-body {
     margin: 16px;
+}
+
+.cards .cards-card-body p {
+    color: var(--text-color);
 }
 
 .cards .cards-card-image {
