--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -3,8 +3,20 @@
     flex-direction: column;
 }
 
+main .section.columns-container {
+    padding: 32px 0px;
+}
+
 .columns img {
     width: 100%;
+    opacity: 1;
+    transition: 0.5s ease-in;
+}
+
+@media (max-width: 900px) {
+    .columns > div {
+        padding: 0px 32px;
+    }
 }
 
 @media (min-width: 900px) {
@@ -12,6 +24,7 @@
         display: flex;
         align-items: center;
         flex-direction: unset;
+        margin: 20px 0px;
     }
 
     .columns > div > div {
@@ -21,5 +34,13 @@
 
     .columns > div > div:first-of-type {
         margin-left: unset;
+    }
+
+    .columns > div:nth-of-type(1) > div:first-of-type {
+        padding-left: 128px;
+    }
+
+    .columns > div:nth-of-type(2) > div:last-of-type {
+        padding-right: 128px;
     }
 }
