--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -30,6 +30,7 @@ header nav[aria-expanded='true'] {
 header .nav-brand {
   grid-area: brand;
   font-size: 22px;
+  color: #fa0f00;
   font-weight: 700;
   line-height: 1em;
 }
@@ -197,7 +198,7 @@ header nav[aria-expanded='true'] .nav-tools li {
   }
 
   header nav .nav-brand {
-    flex: 0 0 150px;
+    flex: 0 0 200px;
   }
 
   header nav .nav-sections ul {
