--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -4,7 +4,7 @@
 }
 
 main .section.columns-container {
-    padding: 32px 0px;
+    padding: 32px 0;
 }
 
 .columns img {
@@ -25,7 +25,7 @@ main .section.columns-container {
 
 @media (max-width: 900px) {
     .columns > div {
-        padding: 0px 32px;
+        padding: 0 32px;
     }
 }
 
@@ -34,7 +34,7 @@ main .section.columns-container {
         display: flex;
         align-items: center;
         flex-direction: unset;
-        padding: 20px 0px;
+        padding: 20px 0;
     }
 
     .columns > div > div {
