--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,4 +227,5 @@ main .section[data-section-status='initialized'] {
 
 main .section.highlight {
   background: var(--highlight-background-gradient);
+  color: white;
 }
