--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,15 +27,15 @@
   /* body sizes */
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
-  --body-font-size-xs: 14px;
+  --body-font-size-xs: 12px;
 
   /* heading sizes */
-  --heading-font-size-xxl: 40px;
-  --heading-font-size-xl: 32px;
-  --heading-font-size-l: 24px;
-  --heading-font-size-m: 20px;
+  --heading-font-size-xxl: 42px;
+  --heading-font-size-xl: 36px;
+  --heading-font-size-l: 32px;
+  --heading-font-size-m: 26px;
   --heading-font-size-s: 18px;
-  --heading-font-size-xs: 16px;
+  --heading-font-size-xs: 12px;
 
   /* nav height */
   --nav-height: 64px;
@@ -79,7 +79,7 @@ h6 { font-size: var(--heading-font-size-xs) }
 p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
-  font-size: 18px;
+  font-size: var(--body-font-size-m);
 }
 
 a:any-link {
@@ -204,14 +204,18 @@ main .section {
   padding: 32px;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1400px) {
   :root {
-    --heading-font-size-xxl: 40px;
-    --heading-font-size-xl: 32px;
-    --heading-font-size-l: 24px;
-    --heading-font-size-m: 20px;
-    --heading-font-size-s: 18px;
-    --heading-font-size-xs: 16px;
+    --heading-font-size-xxl: 48px;
+    --heading-font-size-xl: 42px;
+    --heading-font-size-l: 36px;
+    --heading-font-size-m: 32px;
+    --heading-font-size-s: 26px;
+    --heading-font-size-xs: 18px;
+
+    --body-font-size-m: 26px;
+    --body-font-size-s: 22px;
+    --body-font-size-xs: 18px;
   }
   
   .section > div {
