--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,6 +1,17 @@
 .columns > div {
     display: flex;
     flex-direction: column;
+    flex-flow: column;
+}
+
+@media (max-width: 900px) {
+    .columns > div:nth-of-type(2) > .columns-left {
+        order: 2;
+    }
+    
+    .columns > div:nth-of-type(2) > .columns-right {
+        order: 1;
+    }
 }
 
 main .section.columns-container {
