--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -35,7 +35,7 @@ header .nav-logo img {
 /* brand */
 header .nav-brand p {
   grid-area: brand;
-  font-size: var(--body-font-size-s);
+  font-size: 18px;
   color: #fa0f00;
   font-weight: 700;
   line-height: 1em;
