--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -18,7 +18,7 @@ main .section.columns-container {
 }
 
 .columns img {
-  width: 100%;
+    width: 100%;
     opacity: 0;
     transform: translate(50px, 0);
     transition: transform 0.5s ease-out, opacity 1s;
@@ -53,21 +53,22 @@ main .section.columns-container {
 
 @media (min-width: 900px) {
   .columns > div {
+    display: flex;
     align-items: center;
     flex-direction: unset;
-        padding: 20px 0;
+    padding: 20px 0;
   }
 
   .columns > div > div {
     flex: 1;
     order: unset;
+    margin-left: 32px;
   }
-    }
 
-    .columns > div:nth-of-type(1) > div:first-of-type {
-        padding-left: 128px;
-    }
+  .columns > div:nth-of-type(1) > div:first-of-type {
+      padding-left: 128px;
+  }
 
-    .columns > div:nth-of-type(2) > div:last-of-type {
-        padding-right: 128px;
+  .columns > div:nth-of-type(2) > div:last-of-type {
+      padding-right: 128px;
 }
