--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,15 +1,19 @@
 .columns > div {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 900px) {
-    .columns > div:nth-of-type(2) > .columns-left {
+    .columns > div:nth-of-type(2n) > .columns-left {
         order: 2;
     }
     
-    .columns > div:nth-of-type(2) > .columns-right {
+    .columns > div:nth-of-type(2n) > .columns-right {
         order: 1;
+    }
+
+    .columns > div {
+      padding: 0 32px;
     }
 }
 
@@ -33,34 +37,26 @@ main .section.columns-container {
     transform: translate(0, 0);
 }
 
-@media (max-width: 900px) {
-    .columns > div {
-        padding: 0 32px;
-    }
-}
-
 @media (min-width: 900px) {
-    .columns > div {
-        display: flex;
-        align-items: center;
-        flex-direction: unset;
-        padding: 20px 0;
-    }
+  .columns > div {
+    display: flex;
+    align-items: center;
+    flex-direction: unset;
+    padding: 20px 0;
+  }
 
-    .columns > div > div {
-        flex: 1;
-        margin-left: 32px;
-    }
+  .columns > div > div {
+    flex: 1;
+    order: unset;
+    margin-left: 32px;
+    margin-right: 32px;
+  }
 
-    .columns > div > div:first-of-type {
-        margin-left: unset;
-    }
+  .columns > div:nth-of-type(2n+1) > div:first-of-type {
+      padding-left: 128px;
+  }
 
-    .columns > div:nth-of-type(1) > div:first-of-type {
-        padding-left: 128px;
-    }
-
-    .columns > div:nth-of-type(2) > div:last-of-type {
-        padding-right: 128px;
-    }
+  .columns > div:nth-of-type(2n) > div:last-of-type {
+      padding-right: 128px;
+  }
 }
