soften highlight background color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
   --link-hover-color: #136ff6;
   --background-color: #fff;
   --overlay-background-color: #eee;
-  --highlight-background-color: #ccc;
+  --highlight-background-color: #eee;
   --highlight-background-gradient: linear-gradient(75deg, #222, #444);
   --text-color: #444;
 
