--- a/blocks/columnsplus/columnsplus.css
+++ b/blocks/columnsplus/columnsplus.css
@@ -25,7 +25,7 @@ main .section.columnsplus-container {
   padding: 32px 0;
 }
 
-.columnsplus img {
+.columnsplus :is(img, video) {
   width: 100%;
   opacity: 0;
   position: relative;
@@ -33,11 +33,11 @@ main .section.columnsplus-container {
   transition: transform 0.5s ease-out, opacity 1s;
 }
 
-.columnsplus .columnsplus-left img {
+.columnsplus .columnsplus-left :is(img, video) {
   transform: translate(-50px, 0);
 }
 
-.columnsplus img.enter {
+.columnsplus :is(img, video).enter {
   opacity: 1;
   transform: translate(0, 0);
 }
