--- a/blocks/showcases/showcases.css
+++ b/blocks/showcases/showcases.css
@@ -33,3 +33,12 @@
   aspect-ratio: 4 / 3;
   object-fit: cover;
 }
+
+.showcases .showcases-card {
+  scale: 100%;
+  transition: scale 0.3s;
+}
+
+.showcases .showcases-card:hover {
+  scale: 102%;
+}
