--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
   --link-color: #035fe6;
   --link-hover-color: #136ff6;
   --background-color: #fff;
-  --overlay-background-color: #eee;
+  --overlay-background-color: white;
   --highlight-background-color: #eee;
   --highlight-background-gradient: linear-gradient(75deg, #222, #444);
   --text-color: #444;
