--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -6,19 +6,13 @@
 .carousel {
   position: relative;
   min-height: 300px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
   align-items: center;
 }
 
-
-.carousel .carousel-hidden * {
-  display: none;
-  height: 0px;
-  width: 0px;
-}
-
 .carousel .carousel-panel-container:not(.carousel-hidden) picture {
+  height: 300px;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -29,6 +23,12 @@
   box-sizing: border-box;
 }
 
+
+.carousel .carousel-panel-container:not(.carousel-hidden) p {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .carousel .carousel-panel-container:not(.carousel-hidden) img {
   object-fit: cover;
   width: 100%;
@@ -36,23 +36,42 @@
 }
 
 .carousel .carousel-panel-container:not(.carousel-hidden) {
-  height: 300px;
-  align-items: center;
-}
-
-.carousel div * {
+  position: relative;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
   align-content: center;
 }
 
+.carousel .carousel-panel-container:not(.carousel-hidden) .carousel-panel {
+  position: relative;
+  height: 300px;
+  align-content: center;
+}
+
+.carousel .carousel-panel-container:not(.carousel-hidden) .carousel-panel:not(.carousel-img-panel) {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.carousel .carousel-hidden * {
+  display: none;
+  height: 0px;
+  width: 0px;
+}
+
+.carousel .carousel-panel-container.carousel-hidden {
+  display: none;
+  position: relative;
+  height: 0px;
+  width: 0px;
+}
+
 .carousel :is(img, video) {
   width: 100%;
   opacity: 0;
   position: relative;
-  transform: translate(50px, 0);
-  transition: transform 0.5s ease-out, opacity 1s;
+  transition: opacity 2s;
 }
 
 .carousel :is(img, video).enter {
