--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -24,17 +24,12 @@
   transform: translate(0, 0);
 }
 
-.carousel .carousel-hidden * {
-  display: none;
-  height: 0;
-  width: 0;
-}
-
 .carousel-panel {
   display: flex;
   align-items: center;
   align-content: center;
   flex-direction: unset;
+  transition: opacity 1s;
   padding: 0;
 }
 
@@ -47,16 +42,25 @@
   margin-right: 32px;
 }
 
-
-.carousel .carousel-panel-container.carousel-hidden {
-  display: none;
-  position: relative;
-  height: 0;
-  width: 0;
+.carousel .carousel-panel-container {
+  position: absolute;
+  height: 360px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  transition: opacity 1s;
 }
 
+.carousel .carousel-panel-container.carousel-hidden {
+  opacity: 0;
+  transition: opacity 1s;
+}
 
-.carousel .carousel-panel-container:not(.carousel-hidden) picture {
+.carousel .carousel-panel-container picture {
   height: 360px;
   position: absolute;
   z-index: -1;
@@ -68,32 +72,31 @@
   box-sizing: border-box;
 }
 
-.carousel .carousel-panel-container:not(.carousel-hidden) p {
+.carousel .carousel-panel-container p {
   margin-left: 20px;
   margin-right: 20px;
 }
 
-.carousel .carousel-panel-container:not(.carousel-hidden) img {
+.carousel .carousel-panel-container img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.carousel .carousel-panel-container:not(.carousel-hidden) {
-  position: relative;
-  height: 360px;
+.carousel .carousel-panel-container h1 {
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  align-content: center;
+  color: white;
 }
 
-.carousel .carousel-panel-container:not(.carousel-hidden) .carousel-panel {
+.carousel .carousel-panel-container .carousel-panel {
   position: relative;
   height: 360px;
   align-content: center;
 }
 
-.carousel .carousel-panel-container:not(.carousel-hidden) .carousel-panel:not(.carousel-img-panel) {
+.carousel .carousel-panel-container .carousel-panel:not(.carousel-img-panel) {
   padding-left: 20px;
   padding-right: 20px;
 }
